Update project to JDK 25 (#106)