@@ -1,10 +1,10 @@
-FROM eclipse-temurin:21-jdk-alpine AS build
+FROM eclipse-temurin:25-jdk-alpine AS build
 
 COPY . .
 
 RUN ./gradlew shadowJar
 
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:25-jre-alpine
 
 RUN addgroup -S scriletio && \
     adduser -S -H scriletio -G scriletio
@@ -15,4 +15,4 @@ COPY --chown=scriletio:scriletio --from=build /build/libs/*-all.jar scriletio.ja
 
 USER scriletio
 
-ENTRYPOINT [ "java", "--enable-preview", "-jar", "scriletio.jar" ]
+ENTRYPOINT [ "java", "-jar", "scriletio.jar" ]
